parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> include program
Rule 2     program -> external_decl program
Rule 3     program -> include
Rule 4     program -> external_decl
Rule 5     include -> INCLUDE
Rule 6     external_decl -> decl ;
Rule 7     external_decl -> func_def
Rule 8     external_decl -> ;
Rule 9     decl -> usual_dec
Rule 10    decl -> new_type_dec
Rule 11    usual_dec -> type declarators
Rule 12    declarators -> declarator_1 , declarators
Rule 13    declarators -> declarator_1
Rule 14    declarator_1 -> declarator_2
Rule 15    declarator_1 -> declarator_2 = initializer
Rule 16    declarator_2 -> ID
Rule 17    declarator_2 -> ID ( )
Rule 18    declarator_2 -> ID [ ]
Rule 19    declarator_2 -> ID [ expression ]
Rule 20    initializer -> expression
Rule 21    initializer -> { expressions }
Rule 22    new_type_dec -> new_type ID { new_type_params }
Rule 23    new_type_dec -> new_type ID { new_type_params } declarators
Rule 24    new_type_dec -> new_type ID declarators
Rule 25    new_type -> STRUCT
Rule 26    new_type -> CLASS
Rule 27    new_type_params -> new_type_param new_type_params
Rule 28    new_type_params -> new_type_param
Rule 29    new_type_param -> type declarators ;
Rule 30    func_def -> type ID ( params ) { statements }
Rule 31    func_def -> type ID ( ) { statements }
Rule 32    func_def -> type ID ( params ) { }
Rule 33    func_def -> type ID ( ) { }
Rule 34    params -> param , params
Rule 35    params -> param
Rule 36    param -> type declarator_2
Rule 37    statements -> statement statements
Rule 38    statements -> statement
Rule 39    statement -> expression ;
Rule 40    statement -> decl ;
Rule 41    statement -> conditional
Rule 42    statement -> iteration
Rule 43    statement -> jump ;
Rule 44    statement -> ;
Rule 45    conditional -> IF ( expression ) { stats_or_null }
Rule 46    conditional -> IF ( expression ) { stats_or_null } ELSE conditional
Rule 47    conditional -> IF ( expression ) { stats_or_null } ELSE { stats_or_null }
Rule 48    statement -> { stats_or_null }
Rule 49    stats_or_null -> statements
Rule 50    stats_or_null -> empty
Rule 51    iteration -> WHILE ( expression ) { stats_or_null }
Rule 52    iteration -> DO { stats_or_null } WHILE ( expression ) ;
Rule 53    iteration -> FOR ( expr_or_null_or_init ; expr_or_null ; expr_or_null ) { stats_or_null }
Rule 54    expr_or_null -> expression
Rule 55    expr_or_null -> empty
Rule 56    expr_or_null_or_init -> expr_or_null
Rule 57    expr_or_null_or_init -> usual_dec
Rule 58    jump -> BREAK
Rule 59    jump -> CONTINUE
Rule 60    jump -> RETURN
Rule 61    jump -> RETURN expression
Rule 62    expressions -> expression , expressions
Rule 63    expressions -> expression
Rule 64    expression -> tern_expr
Rule 65    tern_expr -> tern_expr ? tern_expr : tern_expr
Rule 66    tern_expr -> bin_expr
Rule 67    bin_expr -> bin_expr + bin_expr
Rule 68    bin_expr -> bin_expr - bin_expr
Rule 69    bin_expr -> bin_expr * bin_expr
Rule 70    bin_expr -> bin_expr / bin_expr
Rule 71    bin_expr -> bin_expr ^ bin_expr
Rule 72    bin_expr -> bin_expr > bin_expr
Rule 73    bin_expr -> bin_expr < bin_expr
Rule 74    bin_expr -> bin_expr LOGAND bin_expr
Rule 75    bin_expr -> bin_expr LOGOR bin_expr
Rule 76    bin_expr -> bin_expr LOGEQ bin_expr
Rule 77    bin_expr -> bin_expr LOGNEQ bin_expr
Rule 78    bin_expr -> bin_expr LEQ bin_expr
Rule 79    bin_expr -> bin_expr GEQ bin_expr
Rule 80    bin_expr -> bin_expr LSHIFT bin_expr
Rule 81    bin_expr -> bin_expr RSHIFT bin_expr
Rule 82    bin_expr -> bin_expr = bin_expr
Rule 83    bin_expr -> bin_expr ADDEQ bin_expr
Rule 84    bin_expr -> bin_expr SUBEQ bin_expr
Rule 85    bin_expr -> bin_expr MULTEQ bin_expr
Rule 86    bin_expr -> bin_expr DIVEQ bin_expr
Rule 87    bin_expr -> bin_expr MODEQ bin_expr
Rule 88    bin_expr -> pre_unary_expr
Rule 89    pre_unary_expr -> PLUSPLUS pre_unary_expr
Rule 90    pre_unary_expr -> MINUSMINUS pre_unary_expr
Rule 91    pre_unary_expr -> + pre_unary_expr
Rule 92    pre_unary_expr -> - pre_unary_expr
Rule 93    pre_unary_expr -> ! pre_unary_expr
Rule 94    pre_unary_expr -> post_unary_expr
Rule 95    post_unary_expr -> post_unary_expr [ expression ]
Rule 96    post_unary_expr -> post_unary_expr ( )
Rule 97    post_unary_expr -> post_unary_expr ( expressions )
Rule 98    post_unary_expr -> post_unary_expr PLUSPLUS
Rule 99    post_unary_expr -> post_unary_expr MINUSMINUS
Rule 100   post_unary_expr -> post_unary_expr . ID
Rule 101   post_unary_expr -> post_unary_expr RARROW ID
Rule 102   post_unary_expr -> element
Rule 103   element -> ID
Rule 104   element -> NUMBER
Rule 105   element -> CHR
Rule 106   element -> STR
Rule 107   element -> ( expression )
Rule 108   type -> VOID
Rule 109   type -> CHAR
Rule 110   type -> SHORT
Rule 111   type -> INT
Rule 112   type -> LONG
Rule 113   type -> FLOAT
Rule 114   type -> DOUBLE
Rule 115   empty -> <empty>

Terminals, with rules where they appear

!                    : 93
(                    : 17 30 31 32 33 45 46 47 51 52 53 96 97 107
)                    : 17 30 31 32 33 45 46 47 51 52 53 96 97 107
*                    : 69
+                    : 67 91
,                    : 12 34 62
-                    : 68 92
.                    : 100
/                    : 70
:                    : 65
;                    : 6 8 29 39 40 43 44 52 53 53
<                    : 73
=                    : 15 82
>                    : 72
?                    : 65
ADDEQ                : 83
BREAK                : 58
CHAR                 : 109
CHR                  : 105
CLASS                : 26
CONTINUE             : 59
DIVEQ                : 86
DO                   : 52
DOUBLE               : 114
ELSE                 : 46 47
FLOAT                : 113
FOR                  : 53
GEQ                  : 79
ID                   : 16 17 18 19 22 23 24 30 31 32 33 100 101 103
IF                   : 45 46 47
INCLUDE              : 5
INT                  : 111
LEQ                  : 78
LOGAND               : 74
LOGEQ                : 76
LOGNEQ               : 77
LOGOR                : 75
LONG                 : 112
LSHIFT               : 80
MINUSMINUS           : 90 99
MODEQ                : 87
MULTEQ               : 85
NUMBER               : 104
PLUSPLUS             : 89 98
RARROW               : 101
RETURN               : 60 61
RSHIFT               : 81
SHORT                : 110
STR                  : 106
STRUCT               : 25
SUBEQ                : 84
VOID                 : 108
WHILE                : 51 52
[                    : 18 19 95
]                    : 18 19 95
^                    : 71
error                : 
{                    : 21 22 23 30 31 32 33 45 46 47 47 48 51 52 53
}                    : 21 22 23 30 31 32 33 45 46 47 47 48 51 52 53

Nonterminals, with rules where they appear

bin_expr             : 66 67 67 68 68 69 69 70 70 71 71 72 72 73 73 74 74 75 75 76 76 77 77 78 78 79 79 80 80 81 81 82 82 83 83 84 84 85 85 86 86 87 87
conditional          : 41 46
decl                 : 6 40
declarator_1         : 12 13
declarator_2         : 14 15 36
declarators          : 11 12 23 24 29
element              : 102
empty                : 50 55
expr_or_null         : 53 53 56
expr_or_null_or_init : 53
expression           : 19 20 39 45 46 47 51 52 54 61 62 63 95 107
expressions          : 21 62 97
external_decl        : 2 4
func_def             : 7
include              : 1 3
initializer          : 15
iteration            : 42
jump                 : 43
new_type             : 22 23 24
new_type_dec         : 10
new_type_param       : 27 28
new_type_params      : 22 23 27
param                : 34 35
params               : 30 32 34
post_unary_expr      : 94 95 96 97 98 99 100 101
pre_unary_expr       : 88 89 90 91 92 93
program              : 1 2 0
statement            : 37 38
statements           : 30 31 37 49
stats_or_null        : 45 46 47 47 48 51 52 53
tern_expr            : 64 65 65 65
type                 : 11 29 30 31 32 33 36
usual_dec            : 9 57

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . include program
    (2) program -> . external_decl program
    (3) program -> . include
    (4) program -> . external_decl
    (5) include -> . INCLUDE
    (6) external_decl -> . decl ;
    (7) external_decl -> . func_def
    (8) external_decl -> . ;
    (9) decl -> . usual_dec
    (10) decl -> . new_type_dec
    (30) func_def -> . type ID ( params ) { statements }
    (31) func_def -> . type ID ( ) { statements }
    (32) func_def -> . type ID ( params ) { }
    (33) func_def -> . type ID ( ) { }
    (11) usual_dec -> . type declarators
    (22) new_type_dec -> . new_type ID { new_type_params }
    (23) new_type_dec -> . new_type ID { new_type_params } declarators
    (24) new_type_dec -> . new_type ID declarators
    (108) type -> . VOID
    (109) type -> . CHAR
    (110) type -> . SHORT
    (111) type -> . INT
    (112) type -> . LONG
    (113) type -> . FLOAT
    (114) type -> . DOUBLE
    (25) new_type -> . STRUCT
    (26) new_type -> . CLASS

    INCLUDE         shift and go to state 4
    ;               shift and go to state 6
    VOID            shift and go to state 12
    CHAR            shift and go to state 13
    SHORT           shift and go to state 14
    INT             shift and go to state 15
    LONG            shift and go to state 16
    FLOAT           shift and go to state 17
    DOUBLE          shift and go to state 18
    STRUCT          shift and go to state 19
    CLASS           shift and go to state 20

    program                        shift and go to state 1
    include                        shift and go to state 2
    external_decl                  shift and go to state 3
    decl                           shift and go to state 5
    func_def                       shift and go to state 7
    usual_dec                      shift and go to state 8
    new_type_dec                   shift and go to state 9
    type                           shift and go to state 10
    new_type                       shift and go to state 11

state 1

    (0) S' -> program .



state 2

    (1) program -> include . program
    (3) program -> include .
    (1) program -> . include program
    (2) program -> . external_decl program
    (3) program -> . include
    (4) program -> . external_decl
    (5) include -> . INCLUDE
    (6) external_decl -> . decl ;
    (7) external_decl -> . func_def
    (8) external_decl -> . ;
    (9) decl -> . usual_dec
    (10) decl -> . new_type_dec
    (30) func_def -> . type ID ( params ) { statements }
    (31) func_def -> . type ID ( ) { statements }
    (32) func_def -> . type ID ( params ) { }
    (33) func_def -> . type ID ( ) { }
    (11) usual_dec -> . type declarators
    (22) new_type_dec -> . new_type ID { new_type_params }
    (23) new_type_dec -> . new_type ID { new_type_params } declarators
    (24) new_type_dec -> . new_type ID declarators
    (108) type -> . VOID
    (109) type -> . CHAR
    (110) type -> . SHORT
    (111) type -> . INT
    (112) type -> . LONG
    (113) type -> . FLOAT
    (114) type -> . DOUBLE
    (25) new_type -> . STRUCT
    (26) new_type -> . CLASS

    $end            reduce using rule 3 (program -> include .)
    INCLUDE         shift and go to state 4
    ;               shift and go to state 6
    VOID            shift and go to state 12
    CHAR            shift and go to state 13
    SHORT           shift and go to state 14
    INT             shift and go to state 15
    LONG            shift and go to state 16
    FLOAT           shift and go to state 17
    DOUBLE          shift and go to state 18
    STRUCT          shift and go to state 19
    CLASS           shift and go to state 20

    include                        shift and go to state 2
    program                        shift and go to state 21
    external_decl                  shift and go to state 3
    decl                           shift and go to state 5
    func_def                       shift and go to state 7
    usual_dec                      shift and go to state 8
    new_type_dec                   shift and go to state 9
    type                           shift and go to state 10
    new_type                       shift and go to state 11

state 3

    (2) program -> external_decl . program
    (4) program -> external_decl .
    (1) program -> . include program
    (2) program -> . external_decl program
    (3) program -> . include
    (4) program -> . external_decl
    (5) include -> . INCLUDE
    (6) external_decl -> . decl ;
    (7) external_decl -> . func_def
    (8) external_decl -> . ;
    (9) decl -> . usual_dec
    (10) decl -> . new_type_dec
    (30) func_def -> . type ID ( params ) { statements }
    (31) func_def -> . type ID ( ) { statements }
    (32) func_def -> . type ID ( params ) { }
    (33) func_def -> . type ID ( ) { }
    (11) usual_dec -> . type declarators
    (22) new_type_dec -> . new_type ID { new_type_params }
    (23) new_type_dec -> . new_type ID { new_type_params } declarators
    (24) new_type_dec -> . new_type ID declarators
    (108) type -> . VOID
    (109) type -> . CHAR
    (110) type -> . SHORT
    (111) type -> . INT
    (112) type -> . LONG
    (113) type -> . FLOAT
    (114) type -> . DOUBLE
    (25) new_type -> . STRUCT
    (26) new_type -> . CLASS

    $end            reduce using rule 4 (program -> external_decl .)
    INCLUDE         shift and go to state 4
    ;               shift and go to state 6
    VOID            shift and go to state 12
    CHAR            shift and go to state 13
    SHORT           shift and go to state 14
    INT             shift and go to state 15
    LONG            shift and go to state 16
    FLOAT           shift and go to state 17
    DOUBLE          shift and go to state 18
    STRUCT          shift and go to state 19
    CLASS           shift and go to state 20

    external_decl                  shift and go to state 3
    program                        shift and go to state 22
    include                        shift and go to state 2
    decl                           shift and go to state 5
    func_def                       shift and go to state 7
    usual_dec                      shift and go to state 8
    new_type_dec                   shift and go to state 9
    type                           shift and go to state 10
    new_type                       shift and go to state 11

state 4

    (5) include -> INCLUDE .

    INCLUDE         reduce using rule 5 (include -> INCLUDE .)
    ;               reduce using rule 5 (include -> INCLUDE .)
    VOID            reduce using rule 5 (include -> INCLUDE .)
    CHAR            reduce using rule 5 (include -> INCLUDE .)
    SHORT           reduce using rule 5 (include -> INCLUDE .)
    INT             reduce using rule 5 (include -> INCLUDE .)
    LONG            reduce using rule 5 (include -> INCLUDE .)
    FLOAT           reduce using rule 5 (include -> INCLUDE .)
    DOUBLE          reduce using rule 5 (include -> INCLUDE .)
    STRUCT          reduce using rule 5 (include -> INCLUDE .)
    CLASS           reduce using rule 5 (include -> INCLUDE .)
    $end            reduce using rule 5 (include -> INCLUDE .)


state 5

    (6) external_decl -> decl . ;

    ;               shift and go to state 23


state 6

    (8) external_decl -> ; .

    INCLUDE         reduce using rule 8 (external_decl -> ; .)
    ;               reduce using rule 8 (external_decl -> ; .)
    VOID            reduce using rule 8 (external_decl -> ; .)
    CHAR            reduce using rule 8 (external_decl -> ; .)
    SHORT           reduce using rule 8 (external_decl -> ; .)
    INT             reduce using rule 8 (external_decl -> ; .)
    LONG            reduce using rule 8 (external_decl -> ; .)
    FLOAT           reduce using rule 8 (external_decl -> ; .)
    DOUBLE          reduce using rule 8 (external_decl -> ; .)
    STRUCT          reduce using rule 8 (external_decl -> ; .)
    CLASS           reduce using rule 8 (external_decl -> ; .)
    $end            reduce using rule 8 (external_decl -> ; .)


state 7

    (7) external_decl -> func_def .

    INCLUDE         reduce using rule 7 (external_decl -> func_def .)
    ;               reduce using rule 7 (external_decl -> func_def .)
    VOID            reduce using rule 7 (external_decl -> func_def .)
    CHAR            reduce using rule 7 (external_decl -> func_def .)
    SHORT           reduce using rule 7 (external_decl -> func_def .)
    INT             reduce using rule 7 (external_decl -> func_def .)
    LONG            reduce using rule 7 (external_decl -> func_def .)
    FLOAT           reduce using rule 7 (external_decl -> func_def .)
    DOUBLE          reduce using rule 7 (external_decl -> func_def .)
    STRUCT          reduce using rule 7 (external_decl -> func_def .)
    CLASS           reduce using rule 7 (external_decl -> func_def .)
    $end            reduce using rule 7 (external_decl -> func_def .)


state 8

    (9) decl -> usual_dec .

    ;               reduce using rule 9 (decl -> usual_dec .)


state 9

    (10) decl -> new_type_dec .

    ;               reduce using rule 10 (decl -> new_type_dec .)


state 10

    (30) func_def -> type . ID ( params ) { statements }
    (31) func_def -> type . ID ( ) { statements }
    (32) func_def -> type . ID ( params ) { }
    (33) func_def -> type . ID ( ) { }
    (11) usual_dec -> type . declarators
    (12) declarators -> . declarator_1 , declarators
    (13) declarators -> . declarator_1
    (14) declarator_1 -> . declarator_2
    (15) declarator_1 -> . declarator_2 = initializer
    (16) declarator_2 -> . ID
    (17) declarator_2 -> . ID ( )
    (18) declarator_2 -> . ID [ ]
    (19) declarator_2 -> . ID [ expression ]

    ID              shift and go to state 24

    declarators                    shift and go to state 25
    declarator_1                   shift and go to state 26
    declarator_2                   shift and go to state 27

state 11

    (22) new_type_dec -> new_type . ID { new_type_params }
    (23) new_type_dec -> new_type . ID { new_type_params } declarators
    (24) new_type_dec -> new_type . ID declarators

    ID              shift and go to state 28


state 12

    (108) type -> VOID .

    ID              reduce using rule 108 (type -> VOID .)


state 13

    (109) type -> CHAR .

    ID              reduce using rule 109 (type -> CHAR .)


state 14

    (110) type -> SHORT .

    ID              reduce using rule 110 (type -> SHORT .)


state 15

    (111) type -> INT .

    ID              reduce using rule 111 (type -> INT .)


state 16

    (112) type -> LONG .

    ID              reduce using rule 112 (type -> LONG .)


state 17

    (113) type -> FLOAT .

    ID              reduce using rule 113 (type -> FLOAT .)


state 18

    (114) type -> DOUBLE .

    ID              reduce using rule 114 (type -> DOUBLE .)


state 19

    (25) new_type -> STRUCT .

    ID              reduce using rule 25 (new_type -> STRUCT .)


state 20

    (26) new_type -> CLASS .

    ID              reduce using rule 26 (new_type -> CLASS .)


state 21

    (1) program -> include program .

    $end            reduce using rule 1 (program -> include program .)


state 22

    (2) program -> external_decl program .

    $end            reduce using rule 2 (program -> external_decl program .)


state 23

    (6) external_decl -> decl ; .

    INCLUDE         reduce using rule 6 (external_decl -> decl ; .)
    ;               reduce using rule 6 (external_decl -> decl ; .)
    VOID            reduce using rule 6 (external_decl -> decl ; .)
    CHAR            reduce using rule 6 (external_decl -> decl ; .)
    SHORT           reduce using rule 6 (external_decl -> decl ; .)
    INT             reduce using rule 6 (external_decl -> decl ; .)
    LONG            reduce using rule 6 (external_decl -> decl ; .)
    FLOAT           reduce using rule 6 (external_decl -> decl ; .)
    DOUBLE          reduce using rule 6 (external_decl -> decl ; .)
    STRUCT          reduce using rule 6 (external_decl -> decl ; .)
    CLASS           reduce using rule 6 (external_decl -> decl ; .)
    $end            reduce using rule 6 (external_decl -> decl ; .)


state 24

    (30) func_def -> type ID . ( params ) { statements }
    (31) func_def -> type ID . ( ) { statements }
    (32) func_def -> type ID . ( params ) { }
    (33) func_def -> type ID . ( ) { }
    (16) declarator_2 -> ID .
    (17) declarator_2 -> ID . ( )
    (18) declarator_2 -> ID . [ ]
    (19) declarator_2 -> ID . [ expression ]

    (               shift and go to state 29
    =               reduce using rule 16 (declarator_2 -> ID .)
    ,               reduce using rule 16 (declarator_2 -> ID .)
    ;               reduce using rule 16 (declarator_2 -> ID .)
    [               shift and go to state 30


state 25

    (11) usual_dec -> type declarators .

    ;               reduce using rule 11 (usual_dec -> type declarators .)


state 26

    (12) declarators -> declarator_1 . , declarators
    (13) declarators -> declarator_1 .

    ,               shift and go to state 31
    ;               reduce using rule 13 (declarators -> declarator_1 .)


state 27

    (14) declarator_1 -> declarator_2 .
    (15) declarator_1 -> declarator_2 . = initializer

    ,               reduce using rule 14 (declarator_1 -> declarator_2 .)
    ;               reduce using rule 14 (declarator_1 -> declarator_2 .)
    =               shift and go to state 32


state 28

    (22) new_type_dec -> new_type ID . { new_type_params }
    (23) new_type_dec -> new_type ID . { new_type_params } declarators
    (24) new_type_dec -> new_type ID . declarators
    (12) declarators -> . declarator_1 , declarators
    (13) declarators -> . declarator_1
    (14) declarator_1 -> . declarator_2
    (15) declarator_1 -> . declarator_2 = initializer
    (16) declarator_2 -> . ID
    (17) declarator_2 -> . ID ( )
    (18) declarator_2 -> . ID [ ]
    (19) declarator_2 -> . ID [ expression ]

    {               shift and go to state 34
    ID              shift and go to state 33

    declarators                    shift and go to state 35
    declarator_1                   shift and go to state 26
    declarator_2                   shift and go to state 27

state 29

    (30) func_def -> type ID ( . params ) { statements }
    (31) func_def -> type ID ( . ) { statements }
    (32) func_def -> type ID ( . params ) { }
    (33) func_def -> type ID ( . ) { }
    (17) declarator_2 -> ID ( . )
    (34) params -> . param , params
    (35) params -> . param
    (36) param -> . type declarator_2
    (108) type -> . VOID
    (109) type -> . CHAR
    (110) type -> . SHORT
    (111) type -> . INT
    (112) type -> . LONG
    (113) type -> . FLOAT
    (114) type -> . DOUBLE

    )               shift and go to state 38
    VOID            shift and go to state 12
    CHAR            shift and go to state 13
    SHORT           shift and go to state 14
    INT             shift and go to state 15
    LONG            shift and go to state 16
    FLOAT           shift and go to state 17
    DOUBLE          shift and go to state 18

    type                           shift and go to state 36
    params                         shift and go to state 37
    param                          shift and go to state 39

state 30

    (18) declarator_2 -> ID [ . ]
    (19) declarator_2 -> ID [ . expression ]
    (64) expression -> . tern_expr
    (65) tern_expr -> . tern_expr ? tern_expr : tern_expr
    (66) tern_expr -> . bin_expr
    (67) bin_expr -> . bin_expr + bin_expr
    (68) bin_expr -> . bin_expr - bin_expr
    (69) bin_expr -> . bin_expr * bin_expr
    (70) bin_expr -> . bin_expr / bin_expr
    (71) bin_expr -> . bin_expr ^ bin_expr
    (72) bin_expr -> . bin_expr > bin_expr
    (73) bin_expr -> . bin_expr < bin_expr
    (74) bin_expr -> . bin_expr LOGAND bin_expr
    (75) bin_expr -> . bin_expr LOGOR bin_expr
    (76) bin_expr -> . bin_expr LOGEQ bin_expr
    (77) bin_expr -> . bin_expr LOGNEQ bin_expr
    (78) bin_expr -> . bin_expr LEQ bin_expr
    (79) bin_expr -> . bin_expr GEQ bin_expr
    (80) bin_expr -> . bin_expr LSHIFT bin_expr
    (81) bin_expr -> . bin_expr RSHIFT bin_expr
    (82) bin_expr -> . bin_expr = bin_expr
    (83) bin_expr -> . bin_expr ADDEQ bin_expr
    (84) bin_expr -> . bin_expr SUBEQ bin_expr
    (85) bin_expr -> . bin_expr MULTEQ bin_expr
    (86) bin_expr -> . bin_expr DIVEQ bin_expr
    (87) bin_expr -> . bin_expr MODEQ bin_expr
    (88) bin_expr -> . pre_unary_expr
    (89) pre_unary_expr -> . PLUSPLUS pre_unary_expr
    (90) pre_unary_expr -> . MINUSMINUS pre_unary_expr
    (91) pre_unary_expr -> . + pre_unary_expr
    (92) pre_unary_expr -> . - pre_unary_expr
    (93) pre_unary_expr -> . ! pre_unary_expr
    (94) pre_unary_expr -> . post_unary_expr
    (95) post_unary_expr -> . post_unary_expr [ expression ]
    (96) post_unary_expr -> . post_unary_expr ( )
    (97) post_unary_expr -> . post_unary_expr ( expressions )
    (98) post_unary_expr -> . post_unary_expr PLUSPLUS
    (99) post_unary_expr -> . post_unary_expr MINUSMINUS
    (100) post_unary_expr -> . post_unary_expr . ID
    (101) post_unary_expr -> . post_unary_expr RARROW ID
    (102) post_unary_expr -> . element
    (103) element -> . ID
    (104) element -> . NUMBER
    (105) element -> . CHR
    (106) element -> . STR
    (107) element -> . ( expression )

    ]               shift and go to state 41
    PLUSPLUS        shift and go to state 48
    MINUSMINUS      shift and go to state 49
    +               shift and go to state 45
    -               shift and go to state 46
    !               shift and go to state 50
    ID              shift and go to state 40
    NUMBER          shift and go to state 54
    CHR             shift and go to state 55
    STR             shift and go to state 56
    (               shift and go to state 52

    expression                     shift and go to state 42
    tern_expr                      shift and go to state 43
    bin_expr                       shift and go to state 44
    pre_unary_expr                 shift and go to state 47
    post_unary_expr                shift and go to state 51
    element                        shift and go to state 53

state 31

    (12) declarators -> declarator_1 , . declarators
    (12) declarators -> . declarator_1 , declarators
    (13) declarators -> . declarator_1
    (14) declarator_1 -> . declarator_2
    (15) declarator_1 -> . declarator_2 = initializer
    (16) declarator_2 -> . ID
    (17) declarator_2 -> . ID ( )
    (18) declarator_2 -> . ID [ ]
    (19) declarator_2 -> . ID [ expression ]

    ID              shift and go to state 33

    declarator_1                   shift and go to state 26
    declarators                    shift and go to state 57
    declarator_2                   shift and go to state 27

state 32

    (15) declarator_1 -> declarator_2 = . initializer
    (20) initializer -> . expression
    (21) initializer -> . { expressions }
    (64) expression -> . tern_expr
    (65) tern_expr -> . tern_expr ? tern_expr : tern_expr
    (66) tern_expr -> . bin_expr
    (67) bin_expr -> . bin_expr + bin_expr
    (68) bin_expr -> . bin_expr - bin_expr
    (69) bin_expr -> . bin_expr * bin_expr
    (70) bin_expr -> . bin_expr / bin_expr
    (71) bin_expr -> . bin_expr ^ bin_expr
    (72) bin_expr -> . bin_expr > bin_expr
    (73) bin_expr -> . bin_expr < bin_expr
    (74) bin_expr -> . bin_expr LOGAND bin_expr
    (75) bin_expr -> . bin_expr LOGOR bin_expr
    (76) bin_expr -> . bin_expr LOGEQ bin_expr
    (77) bin_expr -> . bin_expr LOGNEQ bin_expr
    (78) bin_expr -> . bin_expr LEQ bin_expr
    (79) bin_expr -> . bin_expr GEQ bin_expr
    (80) bin_expr -> . bin_expr LSHIFT bin_expr
    (81) bin_expr -> . bin_expr RSHIFT bin_expr
    (82) bin_expr -> . bin_expr = bin_expr
    (83) bin_expr -> . bin_expr ADDEQ bin_expr
    (84) bin_expr -> . bin_expr SUBEQ bin_expr
    (85) bin_expr -> . bin_expr MULTEQ bin_expr
    (86) bin_expr -> . bin_expr DIVEQ bin_expr
    (87) bin_expr -> . bin_expr MODEQ bin_expr
    (88) bin_expr -> . pre_unary_expr
    (89) pre_unary_expr -> . PLUSPLUS pre_unary_expr
    (90) pre_unary_expr -> . MINUSMINUS pre_unary_expr
    (91) pre_unary_expr -> . + pre_unary_expr
    (92) pre_unary_expr -> . - pre_unary_expr
    (93) pre_unary_expr -> . ! pre_unary_expr
    (94) pre_unary_expr -> . post_unary_expr
    (95) post_unary_expr -> . post_unary_expr [ expression ]
    (96) post_unary_expr -> . post_unary_expr ( )
    (97) post_unary_expr -> . post_unary_expr ( expressions )
    (98) post_unary_expr -> . post_unary_expr PLUSPLUS
    (99) post_unary_expr -> . post_unary_expr MINUSMINUS
    (100) post_unary_expr -> . post_unary_expr . ID
    (101) post_unary_expr -> . post_unary_expr RARROW ID
    (102) post_unary_expr -> . element
    (103) element -> . ID
    (104) element -> . NUMBER
    (105) element -> . CHR
    (106) element -> . STR
    (107) element -> . ( expression )

    {               shift and go to state 60
    PLUSPLUS        shift and go to state 48
    MINUSMINUS      shift and go to state 49
    +               shift and go to state 45
    -               shift and go to state 46
    !               shift and go to state 50
    ID              shift and go to state 40
    NUMBER          shift and go to state 54
    CHR             shift and go to state 55
    STR             shift and go to state 56
    (               shift and go to state 52

    initializer                    shift and go to state 58
    expression                     shift and go to state 59
    tern_expr                      shift and go to state 43
    bin_expr                       shift and go to state 44
    pre_unary_expr                 shift and go to state 47
    post_unary_expr                shift and go to state 51
    element                        shift and go to state 53

state 33

    (16) declarator_2 -> ID .
    (17) declarator_2 -> ID . ( )
    (18) declarator_2 -> ID . [ ]
    (19) declarator_2 -> ID . [ expression ]

    =               reduce using rule 16 (declarator_2 -> ID .)
    ,               reduce using rule 16 (declarator_2 -> ID .)
    ;               reduce using rule 16 (declarator_2 -> ID .)
    )               reduce using rule 16 (declarator_2 -> ID .)
    (               shift and go to state 61
    [               shift and go to state 30


state 34

    (22) new_type_dec -> new_type ID { . new_type_params }
    (23) new_type_dec -> new_type ID { . new_type_params } declarators
    (27) new_type_params -> . new_type_param new_type_params
    (28) new_type_params -> . new_type_param
    (29) new_type_param -> . type declarators ;
    (108) type -> . VOID
    (109) type -> . CHAR
    (110) type -> . SHORT
    (111) type -> . INT
    (112) type -> . LONG
    (113) type -> . FLOAT
    (114) type -> . DOUBLE

    VOID            shift and go to state 12
    CHAR            shift and go to state 13
    SHORT           shift and go to state 14
    INT             shift and go to state 15
    LONG            shift and go to state 16
    FLOAT           shift and go to state 17
    DOUBLE          shift and go to state 18

    new_type_params                shift and go to state 62
    new_type_param                 shift and go to state 63
    type                           shift and go to state 64

state 35

    (24) new_type_dec -> new_type ID declarators .

    ;               reduce using rule 24 (new_type_dec -> new_type ID declarators .)


state 36

    (36) param -> type . declarator_2
    (16) declarator_2 -> . ID
    (17) declarator_2 -> . ID ( )
    (18) declarator_2 -> . ID [ ]
    (19) declarator_2 -> . ID [ expression ]

    ID              shift and go to state 33

    declarator_2                   shift and go to state 65

state 37

    (30) func_def -> type ID ( params . ) { statements }
    (32) func_def -> type ID ( params . ) { }

    )               shift and go to state 66


state 38

    (31) func_def -> type ID ( ) . { statements }
    (33) func_def -> type ID ( ) . { }
    (17) declarator_2 -> ID ( ) .

    {               shift and go to state 67
    =               reduce using rule 17 (declarator_2 -> ID ( ) .)
    ,               reduce using rule 17 (declarator_2 -> ID ( ) .)
    ;               reduce using rule 17 (declarator_2 -> ID ( ) .)


state 39

    (34) params -> param . , params
    (35) params -> param .

    ,               shift and go to state 68
    )               reduce using rule 35 (params -> param .)


state 40

    (103) element -> ID .
